wip: create changelog

--- a/docs/release-notes/5.43.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.43.0/upgrade-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: bad5c115
-title: Upgrade from 5.43.x to 5.43.0
-description: Learn how to upgrade Webiny from 5.43.x to 5.43.0.
+title: Upgrade from 5.42.x to 5.43.0
+description: Learn how to upgrade Webiny from 5.42.x to 5.43.0.
 ---
 
 
@@ -106,9 +106,11 @@ export default createCoreApp({
 });
 ```
 
-Once you have updated your Webiny project configuration, you will need to redeploy your project. However, because of the fact that, with this release, the VPC configuration now gets correctly attached to the Amazon OpenSearch cluster, redeploying an existing Webiny instance will cause the cluster to be **DESTROYED AND RECREATED**️, which means **all data in the existing cluster will be lost**❗
+Once you have updated your Webiny project configuration, you will need to redeploy your project. 
 
-Luckily, the data can be recreated via the [Amazon OpenSearch - Reindexing Background Task](/docs/core-development-concepts/background-tasks/built-in-background-tasks#amazon-open-search-reindexing-background-task), which can be triggered via the GraphQL API or programmatically.  
+Note that, during deployment, the VPC configuration will now be correctly attached to the Amazon OpenSearch cluster. As a result, the previously deployed cluster will be **DESTROYED** and a new one created. This will result in the **loss of all data from the previous cluster**❗
+
+Luckily, the data can be recreated. Once the new cluster is deployed, the recreation can be done via the [Amazon OpenSearch - Reindexing Background Task](/docs/core-development-concepts/background-tasks/built-in-background-tasks#amazon-open-search-reindexing-background-task), which can be triggered via the GraphQL API or via a custom plugin. This can also be done manually, or alternatively, via a [post-deployment hook](https://www.webiny.com/docs/infrastructure/basics/build-and-deploy-hooks) script that you can add to your Webiny project.
 
 In case you need more help with this, especially when it comes to planning and executing the data migration, please reach out to us via our [community Slack](https://webiny.com/slack).
 
