wip: create changelog

--- a/docs/release-notes/5.43.1/changelog.mdx
+++ b/docs/release-notes/5.43.1/changelog.mdx
@@ -22,6 +22,14 @@ With this approach, we can also avoid the costs associated with CloudFront cache
 
 With the [5.43.0 release](/docs/release-notes/5.43.0/changelog), we introduced a regression within the `webiny watch` command, when used for backend development. 
 
-Basically, despite the fact that the backend code would get recompiled, the changes would not be reflected when trying to rerun the code. On top of that, recompilation would also take longer than usual.
+Basically, despite the fact that the backend code would get locally recompiled, the changes would not be reflected when trying to rerun the code. On top of that, recompilation would also take longer than usual.
 
 This has now been fixed, and the `webiny watch` command should work as expected again.
+
+<Alert type="info">
+
+  With the [5.41.0 release](/docs/release-notes/5.41.0/changelog), we've introduced local AWS Lambda development — a major update to the webiny watch command and the overall backend development experience. 
+  
+  This feature is currently in beta, but if you're interested in trying it out or learning more, check out the [related changelog entry](/docs/release-notes/5.41.0/changelog#introducing-the-new-watch-command-local-aws-lambda-development-4185).
+
+  </Alert>
