docs: add 5.43.2 release note

--- a/docs/release-notes/5.43.2/changelog.mdx
+++ b/docs/release-notes/5.43.2/changelog.mdx
@@ -4,16 +4,31 @@ title: Webiny 5.43.2 Changelog
 description: See what's new in Webiny version 5.43.2
 ---
 
+import folderDropConfirmation from "./assets/hcms-folder-drop-confirmation.gif";
+
 <GithubRelease version={"5.43.2"} />
+
+## Advanced Content Organization (ACO)
+
+### Confirmation Dialog for Folder Drag & Drop ([#4662](https://github.com/webiny/webiny-js/pull/4662))
+
+A new **confirmation dialog** has been introduced when users move folders via drag-and-drop. 
+
+By enabling the new `DropConfirmation` configuration under the `Browser.Folder` namespace, users will now be prompted to confirm the action, helping prevent accidental folder moves. 
+
+This feature is available in the CMS, Page Builder, and File Manager apps. 
+
+By default, the confirmation is disabled (`false`) and can be turned on by setting `DropConfirmation` to `true` in the relevant app config.
+
+<Image src={folderDropConfirmation} title={"Confirm folder move: prompt appears before completing drag-and-drop."} />
 
 ## Folder Level Permissions (FLP)
 
-### ✍️ ([#4652](https://github.com/webiny/webiny-js/pull/4652))
+### Fixed Permission Check on Folder Move ([#4662](https://github.com/webiny/webiny-js/pull/4662))
 
-✍️
+We've fixed a bug that allowed users to move folders into locations they didn’t have write access to. 
 
+Now, when attempting to drag and drop a folder, the system will check whether the user has sufficient permissions on the target folder. 
 
-### ✍️ ([#4652](https://github.com/webiny/webiny-js/pull/4652))
-
-✍️
+If the user has only viewer-level access, the move will be blocked, ensuring proper permission enforcement.
 
