feat: add articles that describes the dialog for folder drag-and-drop to prevent accidental moves

--- a/docs/release-notes/5.43.2/changelog.mdx
+++ b/docs/release-notes/5.43.2/changelog.mdx
@@ -16,7 +16,7 @@ A new **confirmation dialog** has been introduced when users move folders via dr
 
 By enabling the new `DropConfirmation` configuration under the `Browser.Folder` namespace, users will now be prompted to confirm the action, helping prevent accidental folder moves. 
 
-This feature is available in the CMS, Page Builder, and File Manager apps. 
+This feature is available in the [CMS](/docs/headless-cms/extending/confirmation-dialog-for-folder-drag-and-drop), [File Manager](/docs/file-manager/extending/confirmation-dialog-for-folder-drag-and-drop) and [Page Builder](/docs/page-builder/extending/confirmation-dialog-for-folder-drag-and-drop) apps. 
 
 By default, the confirmation is disabled (`false`) and can be turned on by setting `DropConfirmation` to `true` in the relevant app config.
 
