docs: update 5.43.3 release note

--- a/docs/release-notes/5.43.3/changelog.mdx
+++ b/docs/release-notes/5.43.3/changelog.mdx
@@ -12,11 +12,9 @@ description: See what's new in Webiny version 5.43.3
 
 ...
 
-## Folder Level Permissions (FLP)
+### Check security authorization while decorating CMS methods ([#4667](https://github.com/webiny/webiny-js/pull/4667))
+The FLP (Field Level Permissions) decoration applied to CMS CRUD methods is now properly disabled when authorization is turned off — for example, when using `context.security.withoutAuthorization`. 
 
-### Check security authorization while decorating cms methods ([#4667](https://github.com/webiny/webiny-js/pull/4667))
-
-...
-
+This ensures that method behavior aligns correctly with the current security context.
 
 
