feat: elasticsearch nested search

--- a/docs/release-notes/5.43.3/changelog.mdx
+++ b/docs/release-notes/5.43.3/changelog.mdx
@@ -8,11 +8,11 @@ description: See what's new in Webiny version 5.43.3
 
 ## Headless CMS
 
-### Fix nested search in the Elasticsearch/OpenSearch systems. ([#4665](https://github.com/webiny/webiny-js/pull/4665))
+### Fix Nested Search in the Elasticsearch/Opensearch Systems ([#4665](https://github.com/webiny/webiny-js/pull/4665))
+When running a full-text search in the Headless CMS, with a search parameter in either GraphQL query or directly in code, the system now correctly handles nested (object) fields.
 
-...
 
-### Check security authorization while decorating CMS methods ([#4667](https://github.com/webiny/webiny-js/pull/4667))
+### Check Security Authorization While Decorating Cms Methods ([#4667](https://github.com/webiny/webiny-js/pull/4667))
 The FLP (Field Level Permissions) decoration applied to CMS CRUD methods is now properly disabled when authorization is turned off — for example, when using `context.security.withoutAuthorization`. 
 
 This ensures that method behavior aligns correctly with the current security context.
