docs: updated the MCP Server URL and other minor improvements

--- a/docs/developer-docs/5.43.x/get-started/build-with-llms-ai.mdx
+++ b/docs/developer-docs/5.43.x/get-started/build-with-llms-ai.mdx
@@ -15,22 +15,29 @@ import { Alert } from "@/components/Alert";
 
 In this chapter, you'll learn how you can use AI assistants and Remote MCP Server effectively in your Webiny development workflow.
 
-## AI Assistant in Documentation
-
-The Webiny documentation is equipped with an AI Assistant that can answer your questions and help you build customizations with Webiny. To open the AI Assistant, Click the "Ask AI" button in the bottom right corner of the documentation.
-
-You can then ask the AI Assistant any questions about Webiny and the AI Assistant will provide you with relevant documentation links, code snippets, and explanations to help you with your development.
-
 ## Webiny MCP Server
 
 The Webiny documentation provides a remote Model Context Protocol (MCP) server that allows you to find information from the Webiny documentation right in your IDEs or AI tools, such as Cursor.
+You can ensure your AI tools have current Webiny knowledge through the Webiny MCP server. This provides real-time access to the latest documentation, helping AI tools avoid outdated recommendations and ensuring they understand current best practices.
 
-Webiny hosts a Remote MCP server available at https://webiny-mcp-server.developers-d83.workers.dev/sse  
+<Alert type="info" title="What is MCP?">
+
+[Model Context Protocol](https://modelcontextprotocol.io/) (MCP) is a standardized way for AI tools to access external tools and data sources.
+
+</Alert>
+
+
+### Server Details
+
+- **Name**: Webiny Docs
+- **URL**: `https://webiny-mcp-server.sven-f88.workers.dev/mcp`
+- **Transport**: Streamable HTTP
+
 You can add it to AI agents that support connecting to MCP servers.
 
 ### Cursor
 
-[Click here](https://cursor.com/install-mcp?name=webiny&config=eyJ1cmwiOiJodHRwczovL3dlYmlueS1tY3Atc2VydmVyLmRldmVsb3BlcnMtZDgzLndvcmtlcnMuZGV2L3NzZSJ9) to add the Webiny MCP server to Cursor.
+[Click here](https://cursor.com/install-mcp?name=webiny&config=eyJ1cmwiOiJodHRwczovL3dlYmlueS1tY3Atc2VydmVyLnN2ZW4tZjg4LndvcmtlcnMuZGV2L21jcCJ9) to add the Webiny MCP server to Cursor.
 
 To manually connect to the Webiny MCP server in Cursor, add the following to your `.cursor/mcp.json` file or Cursor settings, as explained in the [Cursor documentation](https://docs.cursor.com/context/model-context-protocol):
 
@@ -38,7 +45,7 @@ To manually connect to the Webiny MCP server in Cursor, add the following to you
 {
   "mcpServers": {
     "webiny": {
-      "url": "https://webiny-mcp-server.developers-d83.workers.dev/sse"
+      "url": "https://webiny-mcp-server.sven-f88.workers.dev/mcp"
     }
   }
 }
@@ -46,7 +53,7 @@ To manually connect to the Webiny MCP server in Cursor, add the following to you
 
 ### VSCode
 
-[Click here](https://vscode.dev/redirect/mcp/install?name=webiny&config=%7B%22type%22%3A%22http%22%2C%22url%22%3A%22https%3A%2F%2Fwebiny-mcp-server.developers-d83.workers.dev%2Fsse%22%7D) to add the Webiny MCP server to VSCode.
+[Click here](https://vscode.dev/redirect/mcp/install?name=webiny&config=%7B%22type%22%3A%22http%22%2C%22url%22%3A%22https%3A%2F%2Fwebiny-mcp-server.sven-f88.workers.dev%2Fmcp%22%7D) to add the Webiny MCP server to VSCode.
 
 To manually connect to the Webiny MCP server in VSCode, add the following to your `.vscode/mcp.json` file in your workspace:
 
@@ -55,13 +62,19 @@ To manually connect to the Webiny MCP server in VSCode, add the following to you
   "servers": {
     "webiny": {
       "type": "http",
-      "url": "https://webiny-mcp-server.developers-d83.workers.dev/sse"
+      "url": "https://webiny-mcp-server.sven-f88.workers.dev/mcp"
     }
   }
 }
 ```
 
 Learn more in the [VSCode documentation](https://code.visualstudio.com/docs/copilot/chat/mcp-servers).
+
+## AI Assistant in Documentation
+
+The Webiny documentation is equipped with an AI Assistant that can answer your questions and help you build customizations with Webiny. To open the AI Assistant, Click the "Ask AI" button in the bottom right corner of the documentation.
+
+You can then ask the AI Assistant any questions about Webiny and the AI Assistant will provide you with relevant documentation links, code snippets, and explanations to help you with your development.
 
 ## FAQ
 
