wip: create changelog

--- a/docs/release-notes/5.43.3/changelog.mdx
+++ b/docs/release-notes/5.43.3/changelog.mdx
@@ -13,8 +13,14 @@ When running a full-text search in the Headless CMS, with a search parameter in 
 
 
 ### Check Security Authorization While Decorating Cms Methods ([#4667](https://github.com/webiny/webiny-js/pull/4667))
-The FLP (Field Level Permissions) decoration applied to CMS CRUD methods is now properly disabled when authorization is turned off — for example, when using `context.security.withoutAuthorization`. 
+The FLP (Field Level Permissions) decoration applied to CMS CRUD methods is now properly disabled when authorization is turned off — for example, when using `context.security.withoutAuthorization`.
 
 This ensures that method behavior aligns correctly with the current security context.
 
 
+### Handling missing table cell metadata values gracefully ([#4687](https://github.com/webiny/webiny-js/pull/4689))
+The UI now handles missing table cell metadata gracefully: if some metadata do not exist, the table cell renders a "dash" (-). It previously failed by throwing an error.
+
+
+### In the Headless CMS, add dynamic search placeholder to content entries list  ([#4682](https://github.com/webiny/webiny-js/pull/4682))
+The Search placeholder is more informative now in the HCMS list view, just like the one in File Manager and the Website Builder (coming soon), providing editors with better context about where the search will take place.
