--- a/docs/release-notes/5.43.4/changelog.mdx
+++ b/docs/release-notes/5.43.4/changelog.mdx
@@ -4,12 +4,20 @@ title: Webiny 5.43.4 Changelog
 description: See what's new in Webiny version 5.43.4
 ---
 
+import { GithubRelease } from "@/components/GithubRelease";
+
 <GithubRelease version={"5.43.4"} />
 
-## Security
 
-### Updated Versions of Dependencies ([#4705](https://github.com/webiny/webiny-js/pull/4705)) ([#4707](https://github.com/webiny/webiny-js/pull/4707))
+## Dependencies
 
-We've updated several dependencies to their latest versions to address potential security vulnerabilities and improve overall stability. We recommend updating your projects to benefit from these enhancements.
+### EditorJS ([#4707](https://github.com/webiny/webiny-js/pull/4707))
 
-For a detailed list of updated packages and their versions, please refer to linked PRs.
+We have updated all EditorJS related packages to the latest versions.
+This was done to address security vulnerabilities in some of the dependencies of the `@editorjs/*` packages.
+
+## General Dependencies ([#4705](https://github.com/webiny/webiny-js/pull/4705))
+
+This PR updates several dependencies to address the security issues in previous versions.
+
+Read the [Upgrade Guide](./upgrade-guide) for more details on how to upgrade your project.
