fix: release notes for 5.43.4

--- a/docs/release-notes/5.43.4/upgrade-guide.mdx
+++ b/docs/release-notes/5.43.4/upgrade-guide.mdx
@@ -32,11 +32,13 @@ yarn up "@webiny/*@5.43.4"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.43.4**.
 
-### 2. Run the Upgrade Command (Event If Upgrading From 5.43.x)
+### 2. Run the Upgrade Command (If Upgrading from 5.42.x)
+
+In case you are upgrading to **5.43.4** from **5.42.x**, you must upgrade your project. Depending on your project, you might also need to perform a couple of manual steps.
 
 Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.43.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.42.x to 5.43.0](/docs/release-notes/5.43.0/upgrade-guide) upgrade guide.
 
-### 3. Update Your Project's Dependencies
+### 3. Update Your Project's Dependencies (Even If Upgrading from 5.43.x)
 
 Because this patch addresses some of the security vulnerabilities in Webiny dependencies, you must run some commands to make sure your project is using latest possible versions of those dependencies.
 
