--- a/docs/release-notes/5.43.4/upgrade-guide.mdx
+++ b/docs/release-notes/5.43.4/upgrade-guide.mdx
@@ -4,8 +4,9 @@ title: Upgrade from 5.42.x to 5.43.4
 description: Learn how to upgrade Webiny from 5.42.x to 5.43.4.
 ---
 
-import { Alert } from "@/components/Alert";
-import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
+
+import {Alert} from "@/components/Alert";
+import {AdditionalNotes} from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="success" title="What you’ll learn">
 
@@ -37,7 +38,21 @@ In case you are upgrading to **5.43.4** from **5.42.x**, you must upgrade your p
 
 Before proceeding with the next step, make sure to check the [2. Run the Upgrade Command](/docs/release-notes/5.43.0/upgrade-guide#2-run-the-upgrade-command) section of the [Upgrade From 5.42.x to 5.43.0](/docs/release-notes/5.43.0/upgrade-guide) upgrade guide.
 
-### 3. Deploy Your Project
+### 3. Update Your Project's Dependencies (Even If Upgrading from 5.43.x)
+
+Because this patch addresses some of the security vulnerabilities in Webiny dependencies, you must run some commands to make sure your project is using latest possible versions of those dependencies.
+
+`yarn up crypto-browserify pbkdf2 fastify sha.js form-data cipher-base tmp -R`
+
+<Alert type="warning">
+  
+  This step is required because some of the dependencies are not directly controlled by Webiny, and you need to update them manually.
+  
+</Alert>
+
+```bash
+
+### 4. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
@@ -46,4 +61,4 @@ Proceed by redeploying your Webiny project:
 yarn webiny deploy --env {environment}
 ```
 
-<AdditionalNotes />
+<AdditionalNotes/>
