chore: add 5.43.5 release notes

--- a/docs/release-notes/5.43.4/upgrade-guide.mdx
+++ b/docs/release-notes/5.43.4/upgrade-guide.mdx
@@ -4,9 +4,8 @@ title: Upgrade from 5.42.x to 5.43.4
 description: Learn how to upgrade Webiny from 5.42.x to 5.43.4.
 ---
 
-
-import {Alert} from "@/components/Alert";
-import {AdditionalNotes} from "@/components/upgrade/AdditionalNotes";
+import { Alert } from "@/components/Alert";
+import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="success" title="What you’ll learn">
 
@@ -42,15 +41,14 @@ Before proceeding with the next step, make sure to check the [2. Run the Upgrade
 
 Because this patch addresses some of the security vulnerabilities in Webiny dependencies, you must run some commands to make sure your project is using latest possible versions of those dependencies.
 
-`yarn up crypto-browserify pbkdf2 fastify sha.js form-data cipher-base tmp -R`
+```bash
+yarn up crypto-browserify pbkdf2 fastify sha.js form-data cipher-base tmp -R
+```
 
 <Alert type="warning">
-  
-  This step is required because some of the dependencies are not directly controlled by Webiny, and you need to update them manually.
-  
+  This step is required because some of the dependencies are not directly controlled by Webiny, and
+  you need to update them manually.
 </Alert>
-
-```bash
 
 ### 4. Deploy Your Project
 
@@ -61,4 +59,4 @@ Proceed by redeploying your Webiny project:
 yarn webiny deploy --env {environment}
 ```
 
-<AdditionalNotes/>
+<AdditionalNotes />
